@@ -7,6 +7,7 @@ Broker:
 - Fix excessive CPU usage when the number of sockets exceeds the system limit.
   Closes #948.
 - Fix for bridge connections when using WITH_ADNS=yes.
+- Fix round_robin false behaviour. Closes #481.
 
 Library:
 - Fix situation where username and password is used with SOCKS5 proxy. Closes
